hash navigation: fix shift on hashchange

--- a/Website/Composite/styles/default/base.less
+++ b/Website/Composite/styles/default/base.less
@@ -81,8 +81,8 @@ ui|cover {
 ui|stagecontainer {
     display: block;
     overflow: hidden;
-    padding-right: @explorer-width;
-    margin-right: -(@explorer-width + 1); // +1 to fix bug when Console disappear when ZOOM browser
+    padding-left: @explorer-width;
+    margin-left: -(@explorer-width + 1); // +1 to fix bug when Console disappear when ZOOM browser
     float: left;
 }
 
